isme ek button liya he aur sath hi progressbar view liye he. Dono ki id get kr liya he aur fir xml file me Progresbar ki visiblity ko invisible set kr diya he. fir Button ke click listner pr Progressbar ko setVisiblityy(VISIBLE)kr diya he bas...

--- a/HappyBirthday/app/src/main/res/values/themes.xml
+++ b/HappyBirthday/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!--    <style name="Theme.SplashScreen." parent="Theme.SplashScreen">-->
+    <!--        <item name="windowSplashScreenBackground">@color/green</item>-->
+    <!--        <item name="windowSplashScreenAnimatedIcon">@drawable/whatsapp_logo_png</item>-->
+    <!--        <item name="postSplashScreenTheme">@style/Theme.SplashScreen</item>-->
+    <!--    </style>-->
     <style name="Theme.HappyBirthday" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
